force-app/main/default/objects/Funding_Scheme__c.object
<CustomObject>
    <description>Grants, Funding and Support programs for Monash</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Information about this funding scheme</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Funding Scheme Funder Account</description>
        <label>Funder Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>External_Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Schemes</relationshipLabel>
        <relationshipName>Funding_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Program Name for this funding scheme</description>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Weblink to the funding scheme</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Funding Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Funder_Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Scheme Round</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Schemes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>